# fastapi-example

./: .editorconfig  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
client/: runtime.ts
client/apis/: DefaultApi.ts
client/models/: BlogPost.ts  ResponseListServerApiBlogPost.ts  ResponseStr.ts  index.ts
scripts/: generate_client.py
server/: __main__.py  api.py  openapi.yaml
